--- a/SomeProject/SomeProject/SomeProject.csproj
+++ b/SomeProject/SomeProject/SomeProject.csproj
@@ -55,11 +55,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminForm.Designer.cs">
+      <DependentUpon>AdminForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ask.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ask.Designer.cs">
       <DependentUpon>ask.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CoordinatorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CoordinatorForm.Designer.cs">
+      <DependentUpon>CoordinatorForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -80,6 +92,12 @@
     </Compile>
     <Compile Include="registration.Designer.cs">
       <DependentUpon>registration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="RunnerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RunnerForm.Designer.cs">
+      <DependentUpon>RunnerForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="ask.resx">
       <DependentUpon>ask.cs</DependentUpon>
