--- a/SomeProject/SomeProject/SomeProject.csproj
+++ b/SomeProject/SomeProject/SomeProject.csproj
@@ -32,6 +32,15 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>aBrandNewIcon.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup />
+  <PropertyGroup>
+    <Win32Resource>
+    </Win32Resource>
+  </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="MetroFramework, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
       <HintPath>..\packages\MetroModernUI.1.4.0.0\lib\net\MetroFramework.dll</HintPath>
@@ -239,6 +248,14 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Wikivoyage-logo.svg.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="aBrandNewIcon.ico" />
+    <Content Include="Burn.ico" />
+    <Content Include="fedukOneLove.ico" />
+    <Content Include="icon.ico" />
+    <Content Include="Resources\aBrandNewIcon.ico" />
+    <Content Include="кек.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
