--- a/SomeProject/SomeProject/SomeProject.csproj
+++ b/SomeProject/SomeProject/SomeProject.csproj
@@ -70,17 +70,17 @@
     <Compile Include="AdminForm.Designer.cs">
       <DependentUpon>AdminForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="admin_Clarity.cs">
+    <Compile Include="admin_Charity.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="admin_Clarity.Designer.cs">
-      <DependentUpon>admin_Clarity.cs</DependentUpon>
+    <Compile Include="admin_Charity.Designer.cs">
+      <DependentUpon>admin_Charity.cs</DependentUpon>
     </Compile>
-    <Compile Include="admin_ClarityAdd.cs">
+    <Compile Include="admin_CharityAdd.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="admin_ClarityAdd.Designer.cs">
-      <DependentUpon>admin_ClarityAdd.cs</DependentUpon>
+    <Compile Include="admin_CharityAdd.Designer.cs">
+      <DependentUpon>admin_CharityAdd.cs</DependentUpon>
     </Compile>
     <Compile Include="admin_Users.cs">
       <SubType>Form</SubType>
@@ -161,14 +161,19 @@
     <Compile Include="RunnerForm.Designer.cs">
       <DependentUpon>RunnerForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="WSRDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>WSRDataSet.xsd</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AdminForm.resx">
       <DependentUpon>AdminForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="admin_Clarity.resx">
-      <DependentUpon>admin_Clarity.cs</DependentUpon>
+    <EmbeddedResource Include="admin_Charity.resx">
+      <DependentUpon>admin_Charity.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="admin_ClarityAdd.resx">
-      <DependentUpon>admin_ClarityAdd.cs</DependentUpon>
+    <EmbeddedResource Include="admin_CharityAdd.resx">
+      <DependentUpon>admin_CharityAdd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="admin_Users.resx">
       <DependentUpon>admin_Users.cs</DependentUpon>
@@ -218,6 +223,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="WSRDataSet.xsc">
+      <DependentUpon>WSRDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="WSRDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>WSRDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="WSRDataSet.xss">
+      <DependentUpon>WSRDataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
