--- a/SomeProject/SomeProject/SomeProject.csproj
+++ b/SomeProject/SomeProject/SomeProject.csproj
@@ -42,6 +42,9 @@
   </PropertyGroup>
   <PropertyGroup />
   <ItemGroup>
+    <Reference Include="Bunifu_UI_v1.5.3">
+      <HintPath>..\..\..\..\Downloads\Bunifu_UI_v1.5.3.dll</HintPath>
+    </Reference>
     <Reference Include="MetroFramework, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
       <HintPath>..\packages\MetroModernUI.1.4.0.0\lib\net\MetroFramework.dll</HintPath>
     </Reference>
@@ -51,8 +54,11 @@
     <Reference Include="MetroFramework.Fonts, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
       <HintPath>..\packages\MetroModernUI.1.4.0.0\lib\net\MetroFramework.Fonts.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
+    <Reference Include="System.Messaging" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -70,17 +76,17 @@
     <Compile Include="AdminForm.Designer.cs">
       <DependentUpon>AdminForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="admin_Clarity.cs">
+    <Compile Include="admin_Charity.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="admin_Clarity.Designer.cs">
-      <DependentUpon>admin_Clarity.cs</DependentUpon>
+    <Compile Include="admin_Charity.Designer.cs">
+      <DependentUpon>admin_Charity.cs</DependentUpon>
     </Compile>
-    <Compile Include="admin_ClarityAdd.cs">
+    <Compile Include="admin_CharityAdd.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="admin_ClarityAdd.Designer.cs">
-      <DependentUpon>admin_ClarityAdd.cs</DependentUpon>
+    <Compile Include="admin_CharityAdd.Designer.cs">
+      <DependentUpon>admin_CharityAdd.cs</DependentUpon>
     </Compile>
     <Compile Include="admin_Users.cs">
       <SubType>Form</SubType>
@@ -142,12 +148,24 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="moirez.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="moirez.Designer.cs">
+      <DependentUpon>moirez.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="regmar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="regmar.Designer.cs">
+      <DependentUpon>regmar.cs</DependentUpon>
     </Compile>
     <Compile Include="registration.cs">
       <SubType>Form</SubType>
@@ -161,14 +179,19 @@
     <Compile Include="RunnerForm.Designer.cs">
       <DependentUpon>RunnerForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="WSRDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>WSRDataSet.xsd</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AdminForm.resx">
       <DependentUpon>AdminForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="admin_Clarity.resx">
-      <DependentUpon>admin_Clarity.cs</DependentUpon>
+    <EmbeddedResource Include="admin_Charity.resx">
+      <DependentUpon>admin_Charity.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="admin_ClarityAdd.resx">
-      <DependentUpon>admin_ClarityAdd.cs</DependentUpon>
+    <EmbeddedResource Include="admin_CharityAdd.resx">
+      <DependentUpon>admin_CharityAdd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="admin_Users.resx">
       <DependentUpon>admin_Users.cs</DependentUpon>
@@ -197,10 +220,16 @@
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="moirez.resx">
+      <DependentUpon>moirez.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="regmar.resx">
+      <DependentUpon>regmar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="registration.resx">
       <DependentUpon>registration.cs</DependentUpon>
@@ -218,6 +247,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="WSRDataSet.xsc">
+      <DependentUpon>WSRDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="WSRDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>WSRDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="WSRDataSet.xss">
+      <DependentUpon>WSRDataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -267,4 +307,7 @@
     <None Include="Resources\refresh_icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>"$(TargetPath)"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
