--- a/SomeProject/SomeProject/SomeProject.csproj
+++ b/SomeProject/SomeProject/SomeProject.csproj
@@ -139,11 +139,23 @@
     <Compile Include="CoordinatorForm.Designer.cs">
       <DependentUpon>CoordinatorForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="editrunnerprofile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="editrunnerprofile.Designer.cs">
+      <DependentUpon>editrunnerprofile.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="sponsor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="sponsor.Designer.cs">
+      <DependentUpon>sponsor.cs</DependentUpon>
     </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
@@ -227,6 +239,9 @@
     <EmbeddedResource Include="BMIcalc.resx">
       <DependentUpon>BMIcalc.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="editrunnerprofile.resx">
+      <DependentUpon>editrunnerprofile.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -249,6 +264,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="RunnerForm.resx">
       <DependentUpon>RunnerForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sponsor.resx">
+      <DependentUpon>sponsor.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -336,6 +354,10 @@
   <ItemGroup>
     <Content Include="project_icon.ico" />
     <Content Include="Resources\aBrandNewIcon.ico" />
+    <None Include="Resources\icons8-результаты-теста-30.png" />
+    <None Include="Resources\icons8-краудфандинг-32.png" />
+    <None Include="Resources\icons8-карандаш-26.png" />
+    <None Include="Resources\icons8-бег-32.png" />
     <None Include="Resources\woman.png" />
     <None Include="Resources\man.png" />
     <None Include="Resources\bmiCalc.png" />
