--- a/SomeProject/SomeProject/SomeProject.csproj
+++ b/SomeProject/SomeProject/SomeProject.csproj
@@ -195,6 +195,7 @@
     <Compile Include="sponsor.Designer.cs">
       <DependentUpon>sponsor.cs</DependentUpon>
     </Compile>
+    <Compile Include="userEditInfo.cs" />
     <Compile Include="WSRDataSetCharity.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
