Такой секс с ДатаСетами я не забуду. UserEdit на финале

--- a/SomeProject/SomeProject/SomeProject.csproj
+++ b/SomeProject/SomeProject/SomeProject.csproj
@@ -155,6 +155,9 @@
       <DependentUpon>CoordinatorForm.cs</DependentUpon>
     </Compile>
     <Compile Include="connection.cs" />
+    <Compile Include="DataSets\WSRDataSetUsers.cs">
+      <DependentUpon>WSRDataSetUsers.xsd</DependentUpon>
+    </Compile>
     <Compile Include="editrunnerprofile.cs">
       <SubType>Form</SubType>
     </Compile>
