--- a/SomeProject/SomeProject/SomeProject.csproj
+++ b/SomeProject/SomeProject/SomeProject.csproj
@@ -182,6 +182,12 @@
     <Compile Include="moirez.Designer.cs">
       <DependentUpon>moirez.cs</DependentUpon>
     </Compile>
+    <Compile Include="PasswordRecover.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PasswordRecover.Designer.cs">
+      <DependentUpon>PasswordRecover.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -283,6 +289,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="moirez.resx">
       <DependentUpon>moirez.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PasswordRecover.resx">
+      <DependentUpon>PasswordRecover.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
