--- a/SomeProject/SomeProject/SomeProject.csproj
+++ b/SomeProject/SomeProject/SomeProject.csproj
@@ -182,6 +182,12 @@
     <Compile Include="InfoMenu\InfoForm.Designer.cs">
       <DependentUpon>InfoForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="InfoMenu\InteractiveMap.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InfoMenu\InteractiveMap.Designer.cs">
+      <DependentUpon>InteractiveMap.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -224,6 +230,12 @@
     </Compile>
     <Compile Include="RunnerForm.Designer.cs">
       <DependentUpon>RunnerForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="InfoMenu\ShowImageForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InfoMenu\ShowImageForm.Designer.cs">
+      <DependentUpon>ShowImageForm.cs</DependentUpon>
     </Compile>
     <Compile Include="sponsor.cs">
       <SubType>Form</SubType>
@@ -302,6 +314,9 @@
     <EmbeddedResource Include="InfoMenu\InfoForm.resx">
       <DependentUpon>InfoForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="InfoMenu\InteractiveMap.resx">
+      <DependentUpon>InteractiveMap.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -324,6 +339,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="RunnerForm.resx">
       <DependentUpon>RunnerForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InfoMenu\ShowImageForm.resx">
+      <DependentUpon>ShowImageForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="sponsor.resx">
       <DependentUpon>sponsor.cs</DependentUpon>
@@ -429,6 +447,8 @@
     <None Include="Resources\teatro-municipal.jpg" />
     <None Include="Resources\map_PictureBoxLabel.png" />
     <None Include="Resources\marathon-image.jpg" />
+    <None Include="Resources\InteractiveMap.jpg" />
+    <None Include="Resources\pointer.png" />
     <Content Include="Resources\project_icon.ico" />
     <None Include="Resources\bmiManBad.png" />
     <None Include="Resources\bmiWomanSoSo.png" />
